--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jian Yang's Portfolio</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <title>Ishan's Portfolio</title>
+    <link rel="shortcut icon" href="./assets/favicon.jpg" type="image/x-icon" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,7 +40,7 @@
         <div class="container">
           <nav class="navigation">
             <ul>
-              <li><a href="#portfolio">Portfolio</a></li>
+              <li><a href="http://ceur-ws.org/Vol-3176/paper5.pdf">Publications</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -57,7 +57,7 @@
           </h1>
 
           <div class="header__contact">
-            <a href="mailto:aroraishan51@gmail.com">ishanarora@gmail.com</a>
+            <a href="mailto:aroraishan51@gmail.com">aroraishan@gmail.com</a>
             <a class="btn btn--light" href="assets/resume.pdf" download>
               <i class="bi bi-download"></i> Resume
             </a>
@@ -84,7 +84,7 @@
             Developer
           </h1>
           <p class="hero__content animate__animated animate__slideInUp">
-            Ishan Arora, a self-taught programmer, mentor, ML enthusiaist, competetive coder.
+            Ishan Arora, a self-taught programmer, Mentor, ML enthusiast, Competetive coder.
           </p>
           <ul class="social animate__animated animate__slideInLeft">
             <li>
@@ -120,11 +120,9 @@
             <div class="portfolio__info">
               <h3 class="portfolio__title">Covid-19 Detection using X-ray</h3>
               <p class="portfolio__content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto dignissimos
-                pariatur dolor vitae assumenda, porro quaerat corporis quos placeat a alias
-                molestiae, totam, dolore cum perspiciatis. Voluptate dolorem doloremque nobis.
+                Research oriented, open source Deep Learning Application which is used to diagnose Covid-19 among patients using X-rays and predict the HeatMap around the region of Potential swelling.
               </p>
-              <a class="portfolio__link" href="#">
+              <a class="portfolio__link" href="https://share.streamlit.io/ishn123/app/main/Untitled-1.py">
                 <i class="bi bi-arrow-up-right-circle-fill"></i>
               </a>
             </div>
@@ -134,11 +132,9 @@
             <div class="portfolio__info">
               <h3 class="portfolio__title">Quiz Application using Django</h3>
               <p class="portfolio__content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto dignissimos
-                pariatur dolor vitae assumenda, porro quaerat corporis quos placeat a alias
-                molestiae, totam, dolore cum perspiciatis. Voluptate dolorem doloremque nobis.
+                A Quiz application build on the top of Django REST API in collaboration with IT coders where users can play quiz in real time environment. It includes socket programming client server architecture and browser management.
               </p>
-              <a class="portfolio__link" href="#">
+              <a class="portfolio__link" href="https://github.com/ishn123/QuizApp">
                 <i class="bi bi-arrow-up-right-circle-fill"></i>
               </a>
             </div>
@@ -148,11 +144,9 @@
             <div class="portfolio__info">
               <h3 class="portfolio__title">Banking System</h3>
               <p class="portfolio__content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto dignissimos
-                pariatur dolor vitae assumenda, porro quaerat corporis quos placeat a alias
-                molestiae, totam, dolore cum perspiciatis. Voluptate dolorem doloremque nobis.
+                A Java Enterprise Application (JEEE) which is build using JSP and abstract window toolkit (AWT) providing a basic functionality of banking like credit-debit to users with transaction consistency.
               </p>
-              <a class="portfolio__link" href="#">
+              <a class="portfolio__link" href="https://github.com/ishn123/BankingSys">
                 <i class="bi bi-arrow-up-right-circle-fill"></i>
               </a>
             </div>
@@ -162,11 +156,8 @@
             <div class="portfolio__info">
               <h3 class="portfolio__title">Neural Style Transfer</h3>
               <p class="portfolio__content">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto dignissimos
-                pariatur dolor vitae assumenda, porro quaerat corporis quos placeat a alias
-                molestiae, totam, dolore cum perspiciatis. Voluptate dolorem doloremque nobis.
-              </p>
-              <a class="portfolio__link" href="#">
+                A Deep Learning model is which to transfer style from one image to another trained on top of VGG-16 and customized loss function using pytorch and numpy and OpenCV.
+              <a class="portfolio__link" href="https://github.com/ishn123/Neural-Style-Transfer">
                 <i class="bi bi-arrow-up-right-circle-fill"></i>
               </a>
             </div>
@@ -191,10 +182,7 @@
         <div class="about">
           <h3 class="about__intro">👋 Hi, I'm Ishan Arora</h3>
           <p class="about__bio">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate sed voluptatum
-            quibusdam nulla ullam vitae et, error molestiae porro nisi fugiat dolorum! Ut, commodi
-            quam sunt eveniet, itaque quas a iure reprehenderit, quae corrupti quod quidem unde
-            consequuntur? Distinctio, nemo?
+            Currently working as Junior Software Developer, implementing the real life problems using Software applications build on top of Modern Tech Stack. Mentoring students at Geekster, solving doubts related to Data Structures and Algorithms. Creating amazing content for my youtube channel where one can access solutions to Leetcode coding problems asked by most of the MAANG companies.
           </p>
           <a class="about__link" href="#contact">Contact Me<i class="bi bi-arrow-right"></i></a>
 
@@ -235,15 +223,12 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, maxime
-                    corporis deleniti distinctio ullam, accusamus debitis ratione unde rerum illo
-                    sit laudantium molestiae ipsum praesentium neque sed perferendis! Blanditiis,
-                    debitis.
+                    Can-do Attitude : Good job on completing the tasks on time
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>Dennis Ivy</h4>
-                      <p>Instructor & Youtuber</p>
+                      <h4>Pranay Mudi</h4>
+                      <p>Senior Software Test Automation Engineer at Epam Systems</p>
                     </div>
                   </div>
                 </div>
@@ -252,15 +237,12 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, maxime
-                    corporis deleniti distinctio ullam, accusamus debitis ratione unde rerum illo
-                    sit laudantium molestiae ipsum praesentium neque sed perferendis! Blanditiis,
-                    debitis.
+                    Oustanding performance on all projects by leading 1st on scorecard.
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>Shahriar Parvez</h4>
-                      <p>Web Developer & UI Designer</p>
+                      <h4>Udaybhaskar Valapadasu</h4>
+                      <p>Junior Software Test Automation Engineer at Epam Systems</p>
                     </div>
                   </div>
                 </div>
@@ -269,15 +251,12 @@
                     <i class="bi bi-chat-square-quote"></i>
                   </span>
                   <p class="testimonials__quotes">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, maxime
-                    corporis deleniti distinctio ullam, accusamus debitis ratione unde rerum illo
-                    sit laudantium molestiae ipsum praesentium neque sed perferendis! Blanditiis,
-                    debitis.
+                    Outstanding mentoring and assistance done at Geekster.
                   </p>
                   <div class="testimonials__author">
                     <div class="testimonials__authorInfo">
-                      <h4>Praveen M.</h4>
-                      <p>Python, Django Developer</p>
+                      <h4>Bittu Aggarwal</h4>
+                      <p>Academic Head and Counsellor at Geekster</p>
                     </div>
                   </div>
                 </div>
