--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </h1>
 
           <div class="header__contact">
-            <a href="mailto:aroraishan51@gmail.com">aroraishan@gmail.com</a>
+            <a href="mailto:aroraishan51@gmail.com">aroraishan51@gmail.com</a>
             <a class="btn btn--light" href="assets/resume.pdf" download>
               <i class="bi bi-download"></i> Resume
             </a>
