Updated profile picture

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <div class="hero__wrapper">
           <div class="hero__img">
-            <img src="assets/mine.jpg" alt="Profile Picture" />
+            <img src="assets/mine(1).jpg" alt="Profile Picture" />
           </div>
           <h1 class="hero__title animate__animated animate__slideInUp">
             Junior Software<br />
