--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="portfolio">
           <div class="portfolio__box">
-            <img class="portfolio__img" src="assets/p1.jpg" alt="Portfolio Items" />
+            <img class="portfolio__img" src="assets/SS.png" alt="Portfolio Items" />
             <div class="portfolio__info">
               <h3 class="portfolio__title">Covid-19 Detection using X-ray</h3>
               <p class="portfolio__content">
